Created organization service and handler (#22)
* Created organization service and handler

* Removed unnecessary logs. Added a response object when creating an organization.

* An update that was deleted during the migration process. And added to the organization's service to confirm this null value

* swapped the city and name
